--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Tasos Misailidis | Bodybuilding & Coaching</title>
+    <title>Σχετικά με τον Tasos Misailidis | Bodybuilding & Coaching</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -26,8 +26,10 @@
 </head>
 <body>
 
+<div class="page-container">
+
 <!-- Promo Bar -->
-<div class="promo-bar">Black Friday Sale – Up to 70% OFF!</div>
+<div class="promo-bar">Black Friday Εκπτώσεις – Έως 70% OFF!</div>
 
 <!-- NAVBAR -->
 <header class="mobile-nav">
@@ -37,14 +39,17 @@
     <a href="index.html" class="nav-logo">
         <img src="IMAGES/logo.png" alt="Logo">
     </a>
+
     <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
+        <a href="index.html">Αρχική</a>
+        <a href="programs.html">Προγράμματα</a>
         <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="recipes.html">Συνταγές</a>
+        <a href="flexapil.html">Flexapil</a>
+        <a href="about.html">Σχετικά</a>
+        <a href="contact.html">Επικοινωνία</a>
     </nav>
+
     <button class="nav-icon nav-cart" aria-label="View cart">
         <i class="fa-solid fa-cart-shopping"></i>
     </button>
@@ -57,10 +62,10 @@
 
 <main class="about-wrapper">
 
-    <!-- NEW SECTION 1: Simple centered intro -->
+    <!-- SECTION 1: Simple centered intro -->
     <section class="about-intro">
         <h1 class="about-title">Tasos Misailidis</h1>
-        <p class="about-subtitle">Bodybuilder • Coach • Judge • Mentor</p>
+        <p class="about-subtitle">Bodybuilder • Coach • Κριτής • Mentor</p>
 
         <p class="about-description">
             Ένας από τους πιο ενεργούς και πολυδιάστατους ανθρώπους στον χώρο του ελληνικού bodybuilding.
@@ -87,7 +92,7 @@
         </div>
 
         <div class="about-image">
-            <img src="IMAGES/image1.jpg" alt="Tasos on stage">
+            <img src="IMAGES/image1.jpg" alt="Ο Tasos στη σκηνή">
         </div>
     </section>
 
@@ -108,32 +113,9 @@
         </div>
 
         <div class="about-image">
-            <img src="IMAGES/image2.jpg" alt="Tasos coaching athletes">
+            <img src="IMAGES/image2.jpg" alt="Ο Tasos προπονεί αθλητές">
         </div>
     </section>
-
-
-    <!-- SECTION 4: MuscleClub & Team -->
-    <section class="about-team">
-        <div class="about-team-inner">
-            <div class="about-team-image">
-                <img src="IMAGES/tasos-team.jpg" alt="Tasos with competition team">
-            </div>
-
-            <div class="about-team-text">
-                <h2 class="section-title">MuscleClub & The Battery Team</h2>
-                <p>
-                    Ως ιδιοκτήτης του MuscleClub στη Νίκαια μαζί με τον Θανάση Υφαντόπουλο, έχουν δημιουργήσει μια
-                    ισχυρή ομάδα πρωταθλητών που υποστηρίζονται πλήρως μέσω της εταιρίας Battery.
-                </p>
-                <p>
-                    Υπό την καθοδήγησή τους, οι αθλητές της ομάδας σημειώνουν σταθερά υψηλές διακρίσεις, αποτελώντας
-                    μία από τις πιο υπολογίσιμες δυνάμεις στον χώρο του ελληνικού bodybuilding.
-                </p>
-            </div>
-        </div>
-    </section>
-
 
 
     <!-- SECTION 5: Mission -->
@@ -141,9 +123,28 @@
         <h2 class="mission-title">Το Όραμά του</h2>
         <p class="mission-text">
             Στόχος του Τάσου δεν είναι μόνο να χτίζει σώματα — αλλά να χτίζει χαρακτήρες, πειθαρχία
-            και υγιείς νοοτροπίες. Η φιλοσοφία του βασίζεται στην σκληρή δουλειά, τη συνέπεια
+            και υγιείς νοοτροπίες. Η φιλοσοφία του βασίζεται στη σκληρή δουλειά, τη συνέπεια
             και την αγάπη για το άθλημα.
         </p>
+    </section>
+
+    <!-- SECTION 6: CTA -->
+    <section class="coaching-cta-section">
+        <div class="coaching-cta-inner">
+
+            <div class="coaching-cta-content">
+                <h2 class="coaching-cta-title">Online Coaching με τον Tasos Misailidis</h2>
+
+                <p class="coaching-cta-text">
+                    Εξατομικευμένη καθοδήγηση, επιστημονικά δομημένη προπόνηση και διατροφή, συνεχής παρακολούθηση
+                    και προσαρμογές. Επίλεξε τον στόχο σου — γράμμωση, μυϊκή ανάπτυξη, απώλεια λίπους — και χτίσε
+                    την καλύτερη εκδοχή του εαυτού σου.
+                </p>
+
+                <a href="coaching.html" class="coaching-cta-button">Ξεκίνα Τώρα</a>
+            </div>
+
+        </div>
     </section>
 
 </main>
@@ -155,13 +156,13 @@
     <div class="footer-top">
         <div class="footer-columns">
             <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
+                <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
                 <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
 
             <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
+                <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
                 <a href="#" class="footer-link">Flexapil</a>
                 <a href="#" class="footer-link">Underarmour</a>
                 <a href="#" class="footer-link">Firtech</a>
@@ -170,11 +171,11 @@
 
         <div class="footer-newsletter">
             <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
+                ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
             </h4>
             <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
+                <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
             </form>
 
             <div class="footer-social">
@@ -188,13 +189,15 @@
 
     <div class="footer-bottom">
         <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
+            <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
             <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
+            <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
         </div>
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
+        <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 
