--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact | Tasos Misailidis</title>
+    <title>Επικοινωνία | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -29,9 +29,11 @@
 
 <body>
 
+<div class="page-container">
+
 <!-- Promo Bar -->
 <div class="promo-bar">
-    Black Friday Sale – Up to 70% OFF!
+    Black Friday Εκπτώσεις – Έως 70% OFF!
 </div>
 
 <!-- Header -->
@@ -45,12 +47,13 @@
     </a>
 
     <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
+        <a href="index.html">Αρχική</a>
+        <a href="programs.html">Προγράμματα</a>
         <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="recipes.html">Συνταγές</a>
+        <a href="flexapil.html">Flexapil</a>
+        <a href="about.html">Σχετικά</a>
+        <a href="contact.html">Επικοινωνία</a>
     </nav>
 
     <button class="nav-icon nav-cart" aria-label="View cart">
@@ -66,10 +69,10 @@
 
     <!-- Page Title -->
     <section class="contact-header">
-        <h1 class="contact-title">Get in Touch</h1>
+        <h1 class="contact-title">Επικοινώνησε μαζί μου</h1>
         <p class="contact-subtitle">
-            Whether you have questions about programs, coaching, collaborations, or anything else—
-            I’d love to hear from you.
+            Είτε έχεις απορίες για προγράμματα, coaching, συνεργασίες ή οτιδήποτε άλλο —
+            θα χαρώ να ακούσω από εσένα.
         </p>
     </section>
 
@@ -78,31 +81,31 @@
 
         <!-- Contact Form -->
         <form class="contact-form">
-            <h2 class="form-title">Send a Message</h2>
+            <h2 class="form-title">Στείλε Μήνυμα</h2>
 
             <div class="form-group">
-                <label for="name">Full Name</label>
+                <label for="name">Ονοματεπώνυμο</label>
                 <input type="text" id="name" required>
             </div>
 
             <div class="form-group">
-                <label for="email">Email Address</label>
+                <label for="email">Διεύθυνση Email</label>
                 <input type="email" id="email" required>
             </div>
 
             <div class="form-group">
-                <label for="message">Your Message</label>
+                <label for="message">Το Μήνυμά σου</label>
                 <textarea id="message" rows="6" required></textarea>
             </div>
 
             <button type="submit" class="contact-button">
-                SEND MESSAGE
+                ΣΤΕΙΛΕ ΜΗΝΥΜΑ
             </button>
         </form>
 
         <!-- Contact Information -->
         <div class="contact-info">
-            <h2 class="info-title">Contact Information</h2>
+            <h2 class="info-title">Στοιχεία Επικοινωνίας</h2>
 
             <p class="info-item">
                 <i class="fa-solid fa-envelope"></i>
@@ -116,11 +119,11 @@
 
             <p class="info-item">
                 <i class="fa-solid fa-location-dot"></i>
-                Based in Athens, Greece
+                Βάση: Αθήνα, Ελλάδα
             </p>
 
             <p class="info-note">
-                I typically reply within 24–48 hours.
+                Συνήθως απαντάω μέσα σε 24–48 ώρες.
             </p>
         </div>
 
@@ -152,13 +155,13 @@
     <div class="footer-top">
         <div class="footer-columns">
             <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
+                <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
                 <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
 
             <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
+                <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
                 <a href="#" class="footer-link">Flexapil</a>
                 <a href="#" class="footer-link">Underarmour</a>
                 <a href="#" class="footer-link">Firtech</a>
@@ -167,12 +170,12 @@
 
         <div class="footer-newsletter">
             <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
+                ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
             </h4>
 
             <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
+                <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
             </form>
 
             <div class="footer-social">
@@ -186,14 +189,16 @@
 
     <div class="footer-bottom">
         <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
+            <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
             <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
+            <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
         </div>
 
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
+        <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 
