--- a/privacy.html
+++ b/privacy.html
@@ -49,6 +49,7 @@
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -201,9 +202,9 @@
 
     <div class="footer-bottom">
         <div class="footer-legal">
-            <a href="privacyPolicy.html" class="footer-link">PRIVACY POLICY</a>
+            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
             <span class="footer-separator">|</span>
-            <a href="termsOfService.html" class="footer-link">TERMS OF SERVICE</a>
+            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
         </div>
 
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
