--- a/program-5-day-hypertrophy.html
+++ b/program-5-day-hypertrophy.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>8-Week Fat Loss Blueprint | Tasos Misailidis</title>
+    <title>5-Day Hypertrophy Program | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
 
@@ -29,6 +28,8 @@
 </head>
 
 <body>
+
+<div class="page-container">
 
 <!-- Promo Bar -->
 <div class="promo-bar">
@@ -50,6 +51,7 @@
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -74,16 +76,17 @@
         <div class="product-main">
             <p class="product-badge">Program • PDF Download</p>
 
-            <h1 class="product-title">8-Week Fat Loss Blueprint</h1>
+            <h1 class="product-title">5-Day Hypertrophy Program</h1>
 
             <p class="product-subtitle">
-                An evidence-based fat loss program designed to help you get lean while keeping your strength,
-                performance, and sanity. No fluff, just what works.
+                A high-frequency, muscle-building training plan designed for intermediate and advanced lifters who want
+                to maximize size, strength, and aesthetics. Built for athletes who can commit to training 5 days per week
+                with intention and intensity.
             </p>
 
             <div class="product-meta-row">
                 <p class="product-price">€29.99</p>
-                <p class="product-details">Beginner – Intermediate • 8 Weeks • 4 days/week</p>
+                <p class="product-details">Intermediate – Advanced • 10 Weeks • 5 days/week</p>
             </div>
 
             <button
@@ -104,18 +107,18 @@
     <section class="product-section">
         <h2 class="product-section-title">What You Get</h2>
         <p>
-            The <strong>8-Week Fat Loss Blueprint</strong> is built to get you leaner without burning you out.
-            Every training day, set, and rep has a purpose. The program includes a full training split,
-            cardio guidelines, and clear progression so you always know exactly what to do.
+            The <strong>5-Day Hypertrophy Program</strong> is built for lifters who want a structured, intense, and
+            repeatable plan for maximum muscle growth. Every training session is designed to hit each muscle group with
+            the frequency and volume needed for real progress &mdash; without junk volume or guesswork.
         </p>
 
         <ul class="product-list">
-            <li>8-week structured training plan (4 days/week + optional cardio)</li>
-            <li>Clear warm-up and activation guidelines</li>
-            <li>Exercise selection optimized for hypertrophy and joint health</li>
-            <li>RPE & progression recommendations so you keep improving while cutting</li>
-            <li>Fat loss guidelines for calories, protein, and macros</li>
-            <li>Tips for managing hunger, energy, and recovery</li>
+            <li>Complete 5-day hypertrophy split (Push • Pull • Legs • Upper • Arms/Shoulders)</li>
+            <li>10-week structured progression model, repeatable for long-term gains</li>
+            <li>Warm-up, activation, and basic mobility guidelines</li>
+            <li>Exercise selection optimized for hypertrophy and joint safety</li>
+            <li>RPE and progression instructions so every set has a clear purpose</li>
+            <li>Tips for recovery, intensity techniques, and sustaining progress over time</li>
         </ul>
     </section>
 
@@ -124,10 +127,11 @@
         <h2 class="product-section-title">Is This Program For You?</h2>
         <p>This program is a great fit if you:</p>
         <ul class="product-list">
-            <li>Want to lose body fat while keeping as much muscle and strength as possible</li>
-            <li>Enjoy structured, gym-based training with compound and isolation work</li>
-            <li>Prefer having everything laid out clearly instead of guessing your workouts</li>
-            <li>Are at a beginner to intermediate level in the gym</li>
+            <li>Want to build muscle, strength, and a balanced aesthetic physique</li>
+            <li>Prefer a clear, structured plan instead of guessing your workouts</li>
+            <li>Enjoy training with higher frequency (each muscle group 2–3× per week)</li>
+            <li>Are at an intermediate to advanced level and ready to train with intent</li>
+            <li>Want a repeatable hypertrophy system you can run multiple times per year</li>
         </ul>
     </section>
 
@@ -141,7 +145,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-regular fa-star"></i>
-                <span>4.5 / 5 (32 reviews)</span>
+                <span>4.7 / 5 (41 reviews)</span>
             </p>
         </div>
 
@@ -157,8 +161,8 @@
                     <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Lost 6kg in 8 weeks while keeping all my main lifts. The structure kept me consistent,
-                    and the cardio guidelines were super clear.
+                    Stronger, fuller, better pumps. The structure is perfect and every week pushes you just enough
+                    without burning you out.
                 </p>
             </article>
 
@@ -172,8 +176,8 @@
                     <i class="fa-solid fa-star"></i>
                 </p>
                 <p class="review-text">
-                    The program removed all the guesswork. I finally knew exactly what to do every session.
-                    Loved the balance between weights and cardio.
+                    The best hypertrophy plan I’ve tried. I finally had a clear path for how to progress week to week.
+                    No more random workouts.
                 </p>
             </article>
 
@@ -187,8 +191,8 @@
                     <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Great for getting back into serious training with a clear goal. Would recommend
-                    to anyone who wants structure while cutting.
+                    My back and shoulders finally started to grow again. Great volume, clear progression, and easy to
+                    follow even on busy weeks.
                 </p>
             </article>
 
@@ -247,6 +251,8 @@
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 <script src="JS/checkout.js"></script>
