--- a/program-lean-toned.html
+++ b/program-lean-toned.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Competition Prep Program | Tasos Misailidis</title>
+    <title>Lean & Sculpt Program | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
 
@@ -29,6 +28,8 @@
 </head>
 <body>
 
+<div class="page-container">
+
 <div class="promo-bar">Black Friday Sale – Up to 70% OFF!</div>
 
 <header class="mobile-nav">
@@ -38,14 +39,17 @@
     <a href="index.html" class="nav-logo">
         <img src="IMAGES/logo.png" alt="Logo">
     </a>
+
     <nav class="mobile-menu">
         <a href="index.html">Home</a>
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <button class="nav-icon nav-cart" aria-label="View cart">
         <i class="fa-solid fa-cart-shopping"></i>
     </button>
@@ -53,95 +57,169 @@
 
 <main class="product-wrapper">
 
+    <!-- HERO -->
     <section class="product-hero">
         <div class="product-cover"
-             style="background-image: url('IMAGES/program-comp-cover.jpg');"></div>
+             style="background-image: url('IMAGES/leanSculpt.png');"></div>
 
         <div class="product-main">
             <p class="product-badge">Program • PDF Download</p>
-            <h1 class="product-title">Competition Prep Program</h1>
+            <h1 class="product-title">Lean &amp; Sculpt Program</h1>
             <p class="product-subtitle">
-                A 16-week bodybuilding competition prep structure focused on getting you stage-lean while
-                preserving as much muscle as possible.
+                Transform your body and mindset in just 4 weeks with Tasos Misailidis’ Lean &amp; Sculpt Program — a complete
+                training experience designed specifically for women who want a leaner, tighter, and more defined physique
+                without losing femininity or balance. Built on years of coaching experience and science-based training
+                principles, this program blends strength, mobility, and conditioning to help you tone your muscles, boost
+                your metabolism, and feel confident in every movement.
             </p>
 
             <div class="product-meta-row">
-                <p class="product-price">€49.99</p>
-                <p class="product-details">Advanced • 16 Weeks • 6 days/week</p>
+                <p class="product-price">€29.99</p>
+                <p class="product-details">Beginner → Intermediate • 4 Weeks • 4 days/week</p>
             </div>
 
             <button
                     class="product-button-add"
                     data-product-id="lean-toned"
-                    data-price="49.99">
+                    data-price="29.99">
                 ADD TO CART
             </button>
 
             <p class="product-note">
-                <i class="fa-solid fa-trophy"></i>
-                Stage-focused structure • Includes peak week guidelines
+                <i class="fa-solid fa-heart"></i>
+                Women-focused • Home or gym friendly • Strength, tone &amp; conditioning
             </p>
         </div>
     </section>
 
+    <!-- WHAT YOU GET -->
     <section class="product-section">
-        <h2 class="product-section-title">What You Get</h2>
+        <h2 class="product-section-title">What You’ll Get</h2>
         <p>
-            The <strong>Competition Prep Program</strong> lays out your full training structure for the final 16 weeks
-            leading into a show. It’s designed as a training backbone around which you can plug your nutrition strategy.
+            The <strong>Lean &amp; Sculpt Program</strong> gives you a clear, structured roadmap for the next 4 weeks — no
+            guesswork, no random workouts. Every session is designed to help you tone, tighten, and strengthen your body
+            while supporting your mindset and confidence.
+        </p>
+
+        <ul class="product-list">
+            <li><strong>4-Week Structured Training Plan (PDF)</strong> – 4 workouts per week:
+                Lower Body, Upper Body, Core &amp; Cardio, Full Body Flow.</li>
+            <li><strong>Warm-Up &amp; Activation Protocols</strong> – Improve mobility, prep your joints, and reduce injury risk.</li>
+            <li><strong>Detailed Exercise Tables</strong> – Sets, reps, tempo, and Tasos’ personal coaching notes.</li>
+            <li><strong>Mindset &amp; Recovery Guidance</strong> – Learn how to train with purpose, not perfection.</li>
+            <li><strong>Minimal Equipment Needed</strong> – Dumbbells, resistance bands, and bodyweight options.</li>
+        </ul>
+    </section>
+
+    <!-- WHO IT'S FOR -->
+    <section class="product-section">
+        <h2 class="product-section-title">Who It’s For</h2>
+        <p>This program is ideal for women who want to:</p>
+
+        <ul class="product-list">
+            <li>Tone and define their body without adding unwanted bulk</li>
+            <li>Build strength, posture, and balance</li>
+            <li>Train efficiently at home or in the gym</li>
+            <li>Feel confident, energized, and in control of their fitness routine</li>
+        </ul>
+
+        <p>
+            Whether you’re getting back into training or you simply want to bring structure and purpose to your workouts,
+            <strong>Lean &amp; Sculpt</strong> is your guide to visible results and renewed motivation.
+        </p>
+    </section>
+
+    <!-- PROGRAM HIGHLIGHTS -->
+    <section class="product-section">
+        <h2 class="product-section-title">Program Highlights</h2>
+        <ul class="product-list">
+            <li>Time-efficient 40–50 minute sessions</li>
+            <li>Balanced training split with progressive overload</li>
+            <li>Scientifically designed for fat loss and muscle tone</li>
+            <li>Includes mindset reminders and coaching cues from Tasos</li>
+        </ul>
+
+        <blockquote class="product-quote">
+            “You don’t need to be perfect — you just need to stay consistent.”
+            <span>– Tasos Misailidis</span>
+        </blockquote>
+    </section>
+
+    <!-- WHAT MAKES IT DIFFERENT -->
+    <section class="product-section">
+        <h2 class="product-section-title">What Makes It Different</h2>
+        <p>
+            Unlike generic online workouts, this program is strategically periodized to deliver results while respecting
+            your body’s natural rhythm. Every rep and set is programmed with intention, teaching you proper form, muscle
+            engagement, and progression — exactly like training with Tasos himself.
+        </p>
+        <p>
+            This is more than a workout plan — it’s a 4-week transformation blueprint for your body, mind, and habits.
+        </p>
+    </section>
+
+    <!-- INSTANT ACCESS -->
+    <section class="product-section">
+        <h2 class="product-section-title">Instant Access</h2>
+        <p>
+            Once purchased, you’ll receive an instant digital download (PDF) containing:
         </p>
         <ul class="product-list">
-            <li>16-week training plan focused on retaining muscle while dieting hard</li>
-            <li>High frequency for key muscle groups and weak points</li>
-            <li>Cardio progression guidelines built into the weeks</li>
-            <li>Posing practice suggestions and check-in structure</li>
-            <li>General peak week training guidelines</li>
+            <li>The full 4-week Lean &amp; Sculpt training program</li>
+            <li>Warm-up and activation guide</li>
+            <li>Coaching cues &amp; mindset tips</li>
         </ul>
+        <p>
+            Start today and begin sculpting your strongest, most confident self.
+        </p>
     </section>
 
-    <section class="product-section">
-        <h2 class="product-section-title">Is This Program For You?</h2>
-        <ul class="product-list">
-            <li>You are preparing for a bodybuilding or physique competition</li>
-            <li>You already have a solid training base and experience</li>
-            <li>You can commit to 5–6 sessions per week consistently</li>
-            <li>You understand or will work with someone on the nutrition side</li>
-        </ul>
-    </section>
-
+    <!-- REVIEWS -->
     <section class="product-section product-reviews">
         <div class="product-reviews-header">
             <h2 class="product-section-title">Reviews</h2>
             <p class="product-rating">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <span>5.0 / 5 (9 reviews)</span>
+                <i class="fa-regular fa-star"></i>
+                <span>4.7 / 5 (19 reviews)</span>
             </p>
         </div>
 
         <div class="reviews-grid">
             <article class="review-card">
-                <p class="review-name">Petros K.</p>
+                <p class="review-name">Maria E.</p>
                 <p class="review-stars">
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Helped me structure my whole prep. Knew what to do in the gym each phase.
+                    Loved the structure and how doable the sessions felt. I saw more definition in my arms and legs by week 3.
                 </p>
             </article>
 
             <article class="review-card">
-                <p class="review-name">Dimitra N.</p>
+                <p class="review-name">Katerina N.</p>
                 <p class="review-stars">
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Great for keeping volume in check while getting really lean. Peak week tips were helpful.
+                    The mindset tips were a game changer. No more all-or-nothing approach. I finally feel consistent and in control.
+                </p>
+            </article>
+
+            <article class="review-card">
+                <p class="review-name">Eleni P.</p>
+                <p class="review-stars">
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
+                </p>
+                <p class="review-text">
+                    Great for home training with dumbbells and bands. Short, effective, and I actually look forward to the workouts.
                 </p>
             </article>
         </div>
@@ -150,7 +228,6 @@
 </main>
 
 <footer class="site-footer">
-    <!-- same footer -->
     <div class="footer-top">
         <div class="footer-columns">
             <div class="footer-column">
@@ -190,6 +267,8 @@
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 <script src="JS/checkout.js"></script>
