--- a/program-leg-power.html
+++ b/program-leg-power.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Dumbbell Only Program | Tasos Misailidis</title>
+    <title>Leg Power & Density Program | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
 
@@ -29,6 +28,8 @@
 </head>
 <body>
 
+<div class="page-container">
+
 <div class="promo-bar">
     Black Friday Sale – Up to 70% OFF!
 </div>
@@ -40,14 +41,17 @@
     <a href="index.html" class="nav-logo">
         <img src="IMAGES/logo.png" alt="Logo">
     </a>
+
     <nav class="mobile-menu">
         <a href="index.html">Home</a>
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <button class="nav-icon nav-cart" aria-label="View cart">
         <i class="fa-solid fa-cart-shopping"></i>
     </button>
@@ -57,31 +61,36 @@
 
     <section class="product-hero">
         <div class="product-cover"
-             style="background-image: url('IMAGES/program-home-cover.jpg');"></div>
+             style="background-image: url('IMAGES/legPower.png');"></div>
 
         <div class="product-main">
             <p class="product-badge">Program • PDF Download</p>
-            <h1 class="product-title">Home Dumbbell Only Program</h1>
+
+            <h1 class="product-title">Leg Power & Density Program</h1>
+
             <p class="product-subtitle">
-                A minimal equipment program designed to build muscle and strength at home using only dumbbells
-                and bodyweight movements.
+                The Leg Power &amp; Density Program by Tasos Misailidis is a focused 4-day lower-body specialization plan
+                designed to build strength, power, and muscular density through proven training science and precision
+                technique. Every session targets quads, hamstrings, glutes, and calves with a blend of heavy compounds
+                and high-volume accessory work, following Tasos’ signature approach of controlled execution,
+                intelligent progression, and perfect form under load.
             </p>
 
             <div class="product-meta-row">
-                <p class="product-price">€24.99</p>
-                <p class="product-details">Beginner • 6 Weeks • 3–4 days/week</p>
+                <p class="product-price">€29.99</p>
+                <p class="product-details">Intermediate • 8 Weeks • 4 days/week</p>
             </div>
 
             <button
                     class="product-button-add"
                     data-product-id="leg-power"
-                    data-price="24.99">
+                    data-price="29.99">
                 ADD TO CART
             </button>
 
             <p class="product-note">
-                <i class="fa-solid fa-house"></i>
-                Train from home • Dumbbells only • No gym membership needed
+                <i class="fa-solid fa-bolt"></i>
+                Lower-body specialization • Strength &amp; power focused • Train in any gym
             </p>
         </div>
     </section>
@@ -89,15 +98,17 @@
     <section class="product-section">
         <h2 class="product-section-title">What You Get</h2>
         <p>
-            The <strong>Home Dumbbell Only Program</strong> gives you a clear, structured plan to train effectively
-            from home without sacrificing results.
+            The <strong>Leg Power &amp; Density Program</strong> is built for lifters who are serious about bringing
+            up their lower body. Each week is structured to hit quads, hamstrings, glutes, and calves with the exact
+            balance of heavy lifting, volume, and intensity techniques needed for real strength and size gains.
         </p>
         <ul class="product-list">
-            <li>6-week progressive training plan (3–4 days per week)</li>
-            <li>Upper/lower and full-body variations for flexibility</li>
-            <li>Exercise demonstrations and cues you can follow easily</li>
-            <li>Progression guidelines based on reps in reserve and load</li>
-            <li>Suggestions for limited dumbbell weight situations</li>
+            <li>4-day lower-body specialization split focused on strength and density</li>
+            <li>8-week progression model you can repeat for continued results</li>
+            <li>Heavy compound lifts (squats, hinges, lunges) combined with targeted accessories</li>
+            <li>Clear warm-up, activation, and bracing guidelines for safer heavy lifting</li>
+            <li>RPE and progression instructions so you know when and how to push load or volume</li>
+            <li>Coaching cues and execution tips to maximize tension on every rep</li>
         </ul>
     </section>
 
@@ -105,10 +116,11 @@
         <h2 class="product-section-title">Is This Program For You?</h2>
         <p>This program is perfect if you:</p>
         <ul class="product-list">
-            <li>Train at home or prefer not to go to a commercial gym</li>
-            <li>Have at least one pair of dumbbells (adjustable preferred)</li>
-            <li>Want a clear routine instead of random YouTube workouts</li>
-            <li>Are at a beginner level or returning after a break</li>
+            <li>Have lagging legs and want to finally bring them up</li>
+            <li>Want to build real lower-body strength, not just a pump</li>
+            <li>Enjoy heavy compound lifting paired with focused accessory work</li>
+            <li>Can commit to 4 intense lower-body sessions per week</li>
+            <li>Train in a gym with basic equipment: rack, barbells, machines, and dumbbells</li>
         </ul>
     </section>
 
@@ -119,7 +131,7 @@
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                 <i class="fa-regular fa-star"></i>
-                <span>4.4 / 5 (18 reviews)</span>
+                <span>4.6 / 5 (24 reviews)</span>
             </p>
         </div>
 
@@ -132,7 +144,8 @@
                     <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Great for home training. The sessions are not too long but still challenging.
+                    My quads and glutes finally caught up with my upper body. Heavy but very structured. I always knew
+                    what I was walking into each session.
                 </p>
             </article>
 
@@ -144,7 +157,8 @@
                     <i class="fa-solid fa-star"></i>
                 </p>
                 <p class="review-text">
-                    As a busy mom, this was exactly what I needed. Simple, clear, and effective.
+                    The focus on technique and control changed how I train legs. Stronger, denser, and more confident
+                    under the bar.
                 </p>
             </article>
 
@@ -152,11 +166,12 @@
                 <p class="review-name">Marios T.</p>
                 <p class="review-stars">
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
                     <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Would love even more exercise variations, but the program works.
+                    Tough sessions but the results are worth it. My squat and deadlift both went up and my legs look
+                    noticeably fuller.
                 </p>
             </article>
         </div>
@@ -165,7 +180,6 @@
 </main>
 
 <footer class="site-footer">
-    <!-- same footer as before -->
     <div class="footer-top">
         <div class="footer-columns">
             <div class="footer-column">
@@ -205,6 +219,8 @@
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 <script src="JS/checkout.js"></script>
