--- a/program-strength.html
+++ b/program-strength.html
@@ -29,6 +29,8 @@
 </head>
 <body>
 
+<div class="page-container">
+
 <div class="promo-bar">Black Friday Sale – Up to 70% OFF!</div>
 
 <header class="mobile-nav">
@@ -38,14 +40,17 @@
     <a href="index.html" class="nav-logo">
         <img src="IMAGES/logo.png" alt="Logo">
     </a>
+
     <nav class="mobile-menu">
         <a href="index.html">Home</a>
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <button class="nav-icon nav-cart" aria-label="View cart">
         <i class="fa-solid fa-cart-shopping"></i>
     </button>
@@ -190,6 +195,8 @@
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 <script src="JS/checkout.js"></script>
