--- a/program-upper-lower.html
+++ b/program-upper-lower.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hypertrophy Push Pull Legs | Tasos Misailidis</title>
+    <title>Upper / Lower Strength Program | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -17,18 +17,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="FAVICON/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="FAVICON/favicon-16x16.png">
-
-    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="FAVICON/apple-touch-icon.png">
 </head>
 
 <body>
+
+<div class="page-container">
 
 <div class="promo-bar">
     Black Friday Sale – Up to 70% OFF!
@@ -48,6 +47,7 @@
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -59,6 +59,7 @@
 
 <main class="product-wrapper">
 
+    <!-- HERO -->
     <section class="product-hero">
         <div class="product-cover"
              style="background-image: url('IMAGES/upperLower.png');">
@@ -67,59 +68,68 @@
         <div class="product-main">
             <p class="product-badge">Program • PDF Download</p>
 
-            <h1 class="product-title">Hypertrophy Push Pull Legs</h1>
+            <h1 class="product-title">Upper / Lower Strength Program</h1>
 
             <p class="product-subtitle">
-                A 12-week hypertrophy-focused Push Pull Legs program designed to maximize muscle growth,
-                recovery, and performance with a smart training structure.
+                A structured, time-efficient 4-day routine built for lifters who want to develop muscle, improve
+                strength, and maintain optimal recovery throughout the week. Rooted in Tasos Misailidis’ evidence-based
+                coaching methods, this plan alternates between upper- and lower-body training to maximize progressive
+                overload and balanced growth.
             </p>
 
             <div class="product-meta-row">
-                <p class="product-price">€39.99</p>
-                <p class="product-details">Intermediate • 12 Weeks • 5 days/week</p>
+                <p class="product-price">€34.99</p>
+                <p class="product-details">Intermediate • 10 Weeks • 4 days/week</p>
             </div>
 
             <button
                     class="product-button-add"
                     data-product-id="upper-lower"
-                    data-price="39.99">
+                    data-price="34.99">
                 ADD TO CART
             </button>
 
             <p class="product-note">
                 <i class="fa-solid fa-bolt"></i>
-                Instant download • Optimized PPL split • Gym-based training
+                Instant download • Evidence-based strength split • Gym-based training
             </p>
         </div>
     </section>
 
+    <!-- WHAT YOU GET -->
     <section class="product-section">
         <h2 class="product-section-title">What You Get</h2>
         <p>
-            The <strong>Hypertrophy Push Pull Legs</strong> program is built around a classic PPL structure with
-            modern programming. Volume, intensity, and exercise selection are designed to grow muscle while
-            managing fatigue.
+            The <strong>Upper / Lower Strength Program</strong> alternates between upper-body and lower-body sessions
+            twice per week to ensure balanced development and measurable strength progression. Every movement pattern —
+            push, pull, squat, and hinge — is strategically placed to maximize performance and recovery.
         </p>
+
         <ul class="product-list">
-            <li>12-week PPL structure with clear weekly progression</li>
-            <li>Push, Pull, and Legs days balanced for optimal volume</li>
-            <li>Exercise selection focused on hypertrophy and joint-friendly lifts</li>
-            <li>RPE and progression schemes so you know how hard to push</li>
-            <li>Optional 5th day for weak point specialization</li>
+            <li>Complete 4-day Upper / Lower weekly structure</li>
+            <li>Smart exercise selection based on strength & hypertrophy principles</li>
+            <li>10-week progression model for consistent overload</li>
+            <li>Warm-up and activation guidelines for safer lifting</li>
+            <li>RPE-based intensity cues for precise training effort</li>
+            <li>Technique notes and training tips to refine every movement</li>
         </ul>
     </section>
 
+    <!-- IS THIS FOR YOU -->
     <section class="product-section">
         <h2 class="product-section-title">Is This Program For You?</h2>
         <p>This program is ideal if you:</p>
+
         <ul class="product-list">
-            <li>Already have some lifting experience and know basic technique</li>
-            <li>Want a proven structure for building size and strength</li>
-            <li>Enjoy training 4–5 days per week in a well-equipped gym</li>
-            <li>Prefer having all sets, reps, and exercises laid out for you</li>
+            <li>Want to build strength and muscle without overtraining</li>
+            <li>Prefer a simple, efficient training split that fits a busy lifestyle</li>
+            <li>Enjoy structured programming with clear weekly progression</li>
+            <li>Can commit to 4 intentional sessions per week</li>
+            <li>Want to improve push, pull, hinge, and squat patterns consistently</li>
         </ul>
     </section>
 
+    <!-- REVIEWS -->
     <section class="product-section product-reviews">
         <div class="product-reviews-header">
             <h2 class="product-section-title">Reviews</h2>
@@ -129,11 +139,12 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-regular fa-star"></i>
-                <span>4.6 / 5 (27 reviews)</span>
+                <span>4.7 / 5 (33 reviews)</span>
             </p>
         </div>
 
         <div class="reviews-grid">
+
             <article class="review-card">
                 <p class="review-name">Kostas D.</p>
                 <p class="review-stars">
@@ -142,7 +153,7 @@
                     <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Great structure and exercise selection. Felt like I had a real plan instead of just guessing.
+                    Strength went up across all lifts. Loved how balanced the sessions were. Perfect for busy weeks.
                 </p>
             </article>
 
@@ -154,7 +165,7 @@
                     <i class="fa-solid fa-star"></i>
                 </p>
                 <p class="review-text">
-                    My chest and back have never responded like this. Volume was high but very manageable.
+                    Insane structure. Bench and deadlift improved noticeably. Very clear and effective programming.
                 </p>
             </article>
 
@@ -166,14 +177,16 @@
                     <i class="fa-regular fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Loved the layout. The push and pull days felt very balanced.
+                    Perfect routine for strength with great pacing. I felt recovered every session.
                 </p>
             </article>
+
         </div>
     </section>
 
 </main>
 
+<!-- FOOTER -->
 <footer class="site-footer">
     <div class="footer-top">
         <div class="footer-columns">
@@ -182,6 +195,7 @@
                 <a href="programs.html" class="footer-link">Training Programs</a>
                 <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
+
             <div class="footer-column">
                 <h4 class="footer-heading">SPONSORS</h4>
                 <a href="#" class="footer-link">Flexapil</a>
@@ -194,10 +208,12 @@
             <h4 class="footer-heading">
                 GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
             </h4>
+
             <form class="newsletter-form">
                 <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
                 <button type="submit" class="newsletter-button">SIGN UP</button>
             </form>
+
             <div class="footer-social">
                 <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
@@ -206,17 +222,21 @@
             </div>
         </div>
     </div>
+
     <div class="footer-bottom">
         <div class="footer-legal">
-            <a href="privacyPolicy.html" class="footer-link">PRIVACY POLICY</a>
+            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
             <span class="footer-separator">|</span>
-            <a href="termsOfService.html" class="footer-link">TERMS OF SERVICE</a>
+            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
         </div>
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
     </div>
 </footer>
 
+</div>
+
 <script src="JS/navbar.js"></script>
 <script src="JS/checkout.js"></script>
+
 </body>
 </html>
