--- a/programs.html
+++ b/programs.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Programs | Tasos Misailidis</title>
+    <title>Προγράμματα | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -23,16 +23,17 @@
     <link rel="icon" type="image/png" sizes="32x32" href="FAVICON/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="FAVICON/favicon-16x16.png">
 
-    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="FAVICON/apple-touch-icon.png">
 
 </head>
 
 <body>
 
+<div class="page-container">
+
 <!-- Promo Bar -->
 <div class="promo-bar">
-    Black Friday Sale – Up to 70% OFF!
+    Black Friday Εκπτώσεις – Έως 70% OFF!
 </div>
 
 <!-- Header -->
@@ -46,12 +47,13 @@
     </a>
 
     <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
+        <a href="index.html">Αρχική</a>
+        <a href="programs.html">Προγράμματα</a>
         <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="recipes.html">Συνταγές</a>
+        <a href="flexapil.html">Flexapil</a>
+        <a href="about.html">Σχετικά</a>
+        <a href="contact.html">Επικοινωνία</a>
     </nav>
 
     <button class="nav-icon nav-cart" aria-label="View cart">
@@ -67,20 +69,20 @@
 
     <section class="programs-header">
         <div>
-            <h1 class="programs-title">Programs</h1>
+            <h1 class="programs-title">Προγράμματα</h1>
             <p class="programs-subtitle">
-                Evidence-based bodybuilding & fat loss programs designed by Tasos Misailidis.
-                Choose the one that matches your level, schedule, and goal.
+                Επιστημονικά τεκμηριωμένα προγράμματα bodybuilding & καύσης λίπους, σχεδιασμένα από τον Tasos Misailidis.
+                Επίλεξε το πρόγραμμα που ταιριάζει στο επίπεδο, το χρόνο και τον στόχο σου.
             </p>
         </div>
 
         <div class="programs-sort">
-            <label for="sort-by">Sort by:</label>
+            <label for="sort-by">Ταξινόμηση:</label>
             <select id="sort-by">
-                <option value="default">Featured</option>
-                <option value="price-asc">Price: Low to High</option>
-                <option value="price-desc">Price: High to Low</option>
-                <option value="level">Difficulty</option>
+                <option value="default">Προτεινόμενα</option>
+                <option value="price-asc">Τιμή: Από χαμηλή σε υψηλή</option>
+                <option value="price-desc">Τιμή: Από υψηλή σε χαμηλή</option>
+                <option value="level">Δυσκολία</option>
             </select>
         </div>
     </section>
@@ -98,7 +100,7 @@
                          style="background-image: url('IMAGES/5dayHypertrophy.png');"></div>
                     <div class="program-body">
                         <h2 class="program-title">5-Day Hypertrophy Program</h2>
-                        <p class="program-meta">Beginner • 8 Weeks • 5 days/week</p>
+                        <p class="program-meta">Αρχάριοι • 8 Εβδομάδες • 5 ημέρες/εβδομάδα</p>
                         <p class="program-price">€29.99</p>
                     </div>
                 </article>
@@ -114,7 +116,7 @@
                          style="background-image: url('IMAGES/upperLower.png');"></div>
                     <div class="program-body">
                         <h2 class="program-title">Upper Lower Program</h2>
-                        <p class="program-meta">Intermediate • 12 Weeks • 4 days/week</p>
+                        <p class="program-meta">Μεσαίο επίπεδο • 12 Εβδομάδες • 4 ημέρες/εβδομάδα</p>
                         <p class="program-price">€39.99</p>
                     </div>
                 </article>
@@ -130,7 +132,7 @@
                          style="background-image: url('IMAGES/legPower.png');"></div>
                     <div class="program-body">
                         <h2 class="program-title">Leg Power Program</h2>
-                        <p class="program-meta">Beginner • 6 Weeks • 3–4 days/week</p>
+                        <p class="program-meta">Αρχάριοι • 6 Εβδομάδες • 3–4 ημέρες/εβδομάδα</p>
                         <p class="program-price">€24.99</p>
                     </div>
                 </article>
@@ -145,8 +147,8 @@
                     <div class="program-image"
                          style="background-image: url('IMAGES/gluteGoddess.png');"></div>
                     <div class="program-body">
-                        <h2 class="program-title">Glute Goddess in 6 Weeks</h2>
-                        <p class="program-meta">Intermediate • 6 Weeks • 4 days/week</p>
+                        <h2 class="program-title">Glute Goddess σε 6 Εβδομάδες</h2>
+                        <p class="program-meta">Μεσαίο επίπεδο • 6 Εβδομάδες • 4 ημέρες/εβδομάδα</p>
                         <p class="program-price">€34.99</p>
                     </div>
                 </article>
@@ -161,32 +163,15 @@
                     <div class="program-image"
                          style="background-image: url('IMAGES/leanSculpt.png');"></div>
                     <div class="program-body">
-                        <h2 class="program-title">Lean & Toned in 4 Weeks</h2>
-                        <p class="program-meta">Advanced • 4 Weeks • 6 days/week</p>
+                        <h2 class="program-title">Lean & Toned σε 4 Εβδομάδες</h2>
+                        <p class="program-meta">Προχωρημένο επίπεδο • 4 Εβδομάδες • 6 ημέρες/εβδομάδα</p>
                         <p class="program-price">€49.99</p>
                     </div>
                 </article>
             </a>
 
-            <!-- Program 6 -->
-<!--            <a href="program-strength.html"-->
-<!--               class="program-link"-->
-<!--               data-price="59.99"-->
-<!--               data-level="mixed">-->
-<!--                <article class="program-card">-->
-<!--                    <div class="program-image"-->
-<!--                         style="background-image: url('#');"></div>-->
-<!--                    <div class="program-body">-->
-<!--                        <h2 class="program-title">Ultimate Bodybuilding Bundle</h2>-->
-<!--                        <p class="program-meta">Beginner → Advanced • All programs</p>-->
-<!--                        <p class="program-price">€59.99</p>-->
-<!--                    </div>-->
-<!--                </article>-->
-<!--            </a>-->
-
         </div>
     </section>
-
 
 </main>
 
@@ -198,13 +183,13 @@
     <div class="footer-top">
         <div class="footer-columns">
             <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
+                <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
                 <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
 
             <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
+                <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
                 <a href="#" class="footer-link">Flexapil</a>
                 <a href="#" class="footer-link">Underarmour</a>
                 <a href="#" class="footer-link">Firtech</a>
@@ -213,12 +198,12 @@
 
         <div class="footer-newsletter">
             <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
+                ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
             </h4>
 
             <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
+                <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
             </form>
 
             <div class="footer-social">
@@ -232,17 +217,18 @@
 
     <div class="footer-bottom">
         <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
+            <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
             <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
+            <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
         </div>
 
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
+        <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
     </div>
 </footer>
 
-<script src="JS/navbar.js"></script>
+</div>
 
+<script src="JS/navbar.js"></script>
 <script src="JS/programs.js"></script>
 
 </body>
