--- a/recipes.html
+++ b/recipes.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Recipes | Tasos Misailidis</title>
+    <title>Συνταγές | Tasos Misailidis</title>
 
     <!-- Global styles -->
     <link rel="stylesheet" href="CSS/styles.css">
@@ -33,9 +33,11 @@
 </head>
 <body>
 
+<div class="page-container">
+
 <!-- Promo Bar -->
 <div class="promo-bar">
-    Black Friday Sale – Up to 70% OFF!
+    Black Friday Εκπτώσεις – Έως 70% OFF!
 </div>
 
 <!-- Navbar -->
@@ -49,12 +51,13 @@
     </a>
 
     <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
+        <a href="index.html">Αρχική</a>
+        <a href="programs.html">Προγράμματα</a>
         <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="recipes.html">Συνταγές</a>
+        <a href="flexapil.html">Flexapil</a>
+        <a href="about.html">Σχετικά</a>
+        <a href="contact.html">Επικοινωνία</a>
     </nav>
 
     <button class="nav-icon nav-cart" aria-label="View cart">
@@ -73,29 +76,29 @@
         <div class="recipes-hero-text">
             <h1 class="recipes-title">Tasos Misailidis Cookbook</h1>
             <p class="recipes-subtitle">
-                Coming soon: the complete collection of smart, high-protein recipes
-                used by Tasos and his athletes to get lean, build muscle and stay in shape
-                all year round.
+                Έρχεται σύντομα: η πλήρης συλλογή από έξυπνες, υψηλής πρωτεΐνης συνταγές
+                που χρησιμοποιεί ο Tasos και οι αθλητές του για να γραμμώσουν, να χτίσουν μυς
+                και να μένουν σε φόρμα όλο τον χρόνο.
             </p>
 
             <div class="recipes-highlight">
                 <p>
-                    Not another “clean eating” book. Real food, real macros, real results.
+                    Όχι άλλο ένα «clean eating» βιβλίο. Αληθινό φαγητό, αληθινά macros, αληθινά αποτελέσματα.
                 </p>
             </div>
 
             <p class="recipes-note">
-                The digital cookbook will include breakfast, lunch, dinner and snack ideas—with
-                calories and macros for every recipe.
+                Το ψηφιακό cookbook θα περιλαμβάνει ιδέες για πρωινό, μεσημεριανό, βραδινό και σνακ – με
+                θερμίδες και macros για κάθε συνταγή.
             </p>
 
             <a href="mailto:support@tasosmisailidis.com?subject=Cookbook Notify Me"
                class="recipes-cta-button">
-                NOTIFY ME WHEN IT'S LIVE
+                ΕΙΔΟΠΟΙΗΣΕ ΜΕ ΟΤΑΝ ΒΓΕΙ LIVE
             </a>
 
             <p class="recipes-small">
-                Or join the newsletter below to be the first to know.
+                Ή γράψου στο newsletter πιο κάτω για να μάθεις πρώτος.
             </p>
         </div>
 
@@ -106,38 +109,38 @@
 
     <!-- What will be inside -->
     <section class="recipes-section">
-        <h2 class="section-title">What You Can Expect Inside</h2>
+        <h2 class="section-title">Τι θα βρεις μέσα</h2>
 
         <div class="recipes-grid">
             <article class="recipes-card">
-                <h3 class="card-title">High-Protein Meals</h3>
+                <h3 class="card-title">Γεύματα Υψηλής Πρωτεΐνης</h3>
                 <p class="card-text">
-                    Recipes built around protein so you can hit your targets without
-                    living on dry chicken and plain rice.
+                    Συνταγές χτισμένες γύρω από την πρωτεΐνη, ώστε να πιάνεις τους στόχους σου
+                    χωρίς να τρως μόνο ξερό κοτόπουλο και σκέτο ρύζι.
                 </p>
             </article>
 
             <article class="recipes-card">
-                <h3 class="card-title">Cut, Maintain & Bulk Options</h3>
+                <h3 class="card-title">Επιλογές για Cut, Maintain & Bulk</h3>
                 <p class="card-text">
-                    Different calorie and portion suggestions depending on whether
-                    you’re cutting, maintaining or gaining.
+                    Διαφορετικές θερμίδες και ποσότητες ανάλογα με το αν
+                    είσαι σε φάση γράμμωσης, διατήρησης ή όγκου.
                 </p>
             </article>
 
             <article class="recipes-card">
-                <h3 class="card-title">Fast & Realistic</h3>
+                <h3 class="card-title">Γρήγορες & Ρεαλιστικές</h3>
                 <p class="card-text">
-                    Meals that can actually fit a busy schedule, with ingredients you
-                    can find in a normal supermarket.
+                    Γεύματα που χωράνε πραγματικά σε ένα γεμάτο πρόγραμμα, με υλικά που
+                    βρίσκεις σε ένα κανονικό σουπερμάρκετ.
                 </p>
             </article>
 
             <article class="recipes-card">
-                <h3 class="card-title">Athlete-Tested</h3>
+                <h3 class="card-title">Δοκιμασμένες σε Αθλητές</h3>
                 <p class="card-text">
-                    These are the kinds of meals Tasos’ athletes actually use during
-                    prep and in the offseason—not theory.
+                    Αυτά είναι τα είδη γευμάτων που χρησιμοποιούν οι αθλητές του Tasos
+                    σε προετοιμασία και offseason – όχι θεωρία.
                 </p>
             </article>
         </div>
@@ -146,15 +149,15 @@
     <!-- Simple CTA strip -->
     <section class="recipes-cta-strip">
         <div class="recipes-cta-inner">
-            <h2 class="cta-title">Want Early Access?</h2>
+            <h2 class="cta-title">Θέλεις Early Access;</h2>
             <p class="cta-text">
-                If you want early access or you’re interested in using the cookbook with
-                your current training phase, send us an email and we’ll keep you in the loop.
+                Αν θέλεις early access ή σε ενδιαφέρει να χρησιμοποιήσεις το cookbook
+                στην τωρινή φάση προπόνησής σου, στείλε μας email και θα σε κρατήσουμε ενήμερο.
             </p>
 
             <a href="mailto:support@tasosmisailidis.com?subject=Cookbook Early Access"
                class="recipes-cta-button cta-button-light">
-                EMAIL US ABOUT THE COOKBOOK
+                ΣΤΕΙΛΕ ΜΑΣ EMAIL ΓΙΑ ΤΟ COOKBOOK
             </a>
         </div>
     </section>
@@ -166,13 +169,13 @@
     <div class="footer-top">
         <div class="footer-columns">
             <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
+                <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
                 <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
 
             <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
+                <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
                 <a href="#" class="footer-link">Flexapil</a>
                 <a href="#" class="footer-link">Underarmour</a>
                 <a href="#" class="footer-link">Firtech</a>
@@ -181,12 +184,12 @@
 
         <div class="footer-newsletter">
             <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
+                ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
             </h4>
 
             <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
+                <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
             </form>
 
             <div class="footer-social">
@@ -200,13 +203,15 @@
 
     <div class="footer-bottom">
         <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
+            <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
             <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
+            <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
         </div>
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
+        <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 </body>
