--- a/program-glute-goddess.html
+++ b/program-glute-goddess.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ultimate Bodybuilding Bundle | Tasos Misailidis</title>
+    <title>Glute Goddess Program | Tasos Misailidis</title>
 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/navbar.css">
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
 
@@ -29,6 +28,8 @@
 </head>
 <body>
 
+<div class="page-container">
+
 <div class="promo-bar">Black Friday Sale – Up to 70% OFF!</div>
 
 <header class="mobile-nav">
@@ -38,14 +39,17 @@
     <a href="index.html" class="nav-logo">
         <img src="IMAGES/logo.png" alt="Logo">
     </a>
+
     <nav class="mobile-menu">
         <a href="index.html">Home</a>
         <a href="programs.html">Programs</a>
         <a href="coaching.html">Coaching</a>
         <a href="recipes.html">Recipes</a>
+        <a href="flexapil.html">Flexapil</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <button class="nav-icon nav-cart" aria-label="View cart">
         <i class="fa-solid fa-cart-shopping"></i>
     </button>
@@ -53,96 +57,165 @@
 
 <main class="product-wrapper">
 
+    <!-- HERO -->
     <section class="product-hero">
         <div class="product-cover"
-             style="background-image: url('IMAGES/program-bundle-cover.jpg');"></div>
+             style="background-image: url('IMAGES/gluteGoddess.png');"></div>
 
         <div class="product-main">
-            <p class="product-badge">Bundle • PDF Downloads</p>
-            <h1 class="product-title">Ultimate Bodybuilding Bundle</h1>
+            <p class="product-badge">Program • PDF Download</p>
+            <h1 class="product-title">Glute Goddess Program</h1>
             <p class="product-subtitle">
-                Get every main program in one discounted bundle: fat loss, hypertrophy, strength, home training,
-                and competition prep structure.
+                Step into your strongest, most confident self with the Glute Goddess Program — a 6-week lower-body
+                transformation designed to lift, shape, and tone your glutes like never before. This isn’t a random
+                mix of leg exercises, but a scientifically structured plan built around progressive overload, glute
+                activation, and proper recovery to help you grow real, feminine muscle curves.
             </p>
 
             <div class="product-meta-row">
-                <p class="product-price">€59.99</p>
-                <p class="product-details">Beginner → Advanced • Multiple phases • Full library</p>
+                <p class="product-price">€29.99</p>
+                <p class="product-details">Beginner → Intermediate • 6 Weeks • 3–4 days/week</p>
             </div>
 
             <button
                     class="product-button-add"
                     data-product-id="glute-goddess"
-                    data-price="59.99">
+                    data-price="29.99">
                 ADD TO CART
             </button>
 
             <p class="product-note">
-                <i class="fa-solid fa-box-open"></i>
-                Best value • Lifetime access to all PDFs in the bundle
+                <i class="fa-solid fa-dumbbell"></i>
+                Glute-focused training • Gym or home friendly • Strength &amp; hypertrophy based
             </p>
         </div>
     </section>
 
+    <!-- WHAT YOU GET -->
     <section class="product-section">
         <h2 class="product-section-title">What You Get</h2>
         <p>
-            The <strong>Ultimate Bodybuilding Bundle</strong> gives you a complete training toolkit for every phase:
-            cutting, gaining, recomposition, home periods, and even stage prep.
+            The <strong>Glute Goddess Program</strong> targets every angle of your lower body with the perfect balance
+            of compound strength work (squats, hip thrusts, lunges) and focused isolation (kickbacks, abductions,
+            bridges) to create roundness, density, and lift — while improving lower-body strength, hip stability,
+            and posture.
+        </p>
+
+        <ul class="product-list">
+            <li>Complete 6-week glute-focused training plan (gym and home-friendly options)</li>
+            <li>3–4 structured sessions per week centered around glute activation and strength</li>
+            <li>Glute activation warm-up guide to “switch on” your muscles before every workout</li>
+            <li>Step-by-step exercise breakdowns for proper form and execution</li>
+            <li>Progress tracking sheets so you can log sets, reps, and load week by week</li>
+            <li>Nutrition &amp; recovery recommendations to support growth and shape</li>
+            <li>Tips to improve mind–muscle connection and actually feel your glutes working</li>
+        </ul>
+    </section>
+
+    <!-- IS THIS PROGRAM FOR YOU -->
+    <section class="product-section">
+        <h2 class="product-section-title">Is This Program For You?</h2>
+        <p>This program is a perfect fit if you:</p>
+
+        <ul class="product-list">
+            <li>Want noticeably rounder, firmer, more lifted glutes</li>
+            <li>Prefer a feminine, curves-focused lower-body approach rather than pure powerlifting</li>
+            <li>Train 3–4 times per week and want every session to be intentional and effective</li>
+            <li>Have access to dumbbells and resistance bands (barbell and cables optional)</li>
+            <li>Are a beginner or intermediate lifter who wants a clear, glute-centered plan</li>
+            <li>Want to improve hip stability, posture, and overall lower-body strength</li>
+        </ul>
+    </section>
+
+    <!-- PROGRAM DETAILS (HIGHLIGHTED) -->
+    <section class="product-section">
+        <h2 class="product-section-title">Program Details</h2>
+        <ul class="product-list">
+            <li><strong>Duration:</strong> 6 weeks</li>
+            <li><strong>Frequency:</strong> 3–4 sessions per week</li>
+            <li><strong>Level:</strong> Beginner → Intermediate</li>
+            <li><strong>Equipment:</strong> Dumbbells, barbell (optional), cables or resistance bands</li>
+            <li><strong>Training Style:</strong> Strength &amp; hypertrophy focused</li>
+        </ul>
+        <p>
+            Each session is structured to:
         </p>
         <ul class="product-list">
-            <li>8-Week Fat Loss Blueprint</li>
-            <li>Hypertrophy Push Pull Legs Program</li>
-            <li>Home Dumbbell Only Program</li>
-            <li>Strength & Size Hybrid Program</li>
-            <li>Competition Prep structure</li>
-            <li>Guidance on how to move between phases intelligently</li>
+            <li>Activate the glutes before training</li>
+            <li>Lift heavy with perfect form using key compound movements</li>
+            <li>Finish with targeted isolation work for maximum pump and shape</li>
+            <li>Track your progress week by week for visible, measurable results</li>
         </ul>
     </section>
 
+    <!-- WHY IT WORKS -->
     <section class="product-section">
-        <h2 class="product-section-title">Is This Bundle For You?</h2>
-        <ul class="product-list">
-            <li>You want a long-term roadmap, not just a single phase</li>
-            <li>You cycle between gaining and cutting phases during the year</li>
-            <li>You sometimes train at home and sometimes in the gym</li>
-            <li>You want maximum value and flexibility from your purchase</li>
-        </ul>
+        <h2 class="product-section-title">Why It Works</h2>
+        <p>
+            Most women train their glutes incorrectly — too little resistance, too much random repetition, or the wrong
+            movement order. The <strong>Glute Goddess</strong> approach fixes that. It uses proven training science to
+            progressively overload your glutes while ensuring proper activation from the very first set.
+        </p>
+        <p>
+            You’ll feel the difference in the first week — and start to see it in the mirror by week 3. This is not
+            about trends or quick fixes. It’s about a smart, structured plan that reshapes your lower body through
+            consistency, effort, and intention.
+        </p>
+        <p>
+            The result? A stronger, more lifted, more confident you — built through discipline, science, and smart
+            training. You don’t need to chase trends. You just need a plan that works.
+        </p>
     </section>
 
+    <!-- REVIEWS -->
     <section class="product-section product-reviews">
         <div class="product-reviews-header">
             <h2 class="product-section-title">Reviews</h2>
             <p class="product-rating">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <span>5.0 / 5 (14 reviews)</span>
+                <i class="fa-regular fa-star"></i>
+                <span>4.8 / 5 (26 reviews)</span>
             </p>
         </div>
 
         <div class="reviews-grid">
             <article class="review-card">
-                <p class="review-name">Leo P.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </p>
-                <p class="review-text">
-                    Honestly, the bundle is a no-brainer. I’ve used different programs at different stages this year.
-                </p>
-            </article>
-
-            <article class="review-card">
                 <p class="review-name">Christina L.</p>
                 <p class="review-stars">
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </p>
+                <p class="review-text">
+                    I finally feel my glutes working instead of just my quads. The activation and structure changed
+                    everything. I’m already seeing more shape in week 4.
+                </p>
+            </article>
+
+            <article class="review-card">
+                <p class="review-name">Sofia M.</p>
+                <p class="review-stars">
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </p>
                 <p class="review-text">
-                    Love having options. I started with the home program, then moved into the hypertrophy plan.
+                    The balance of heavy lifts and isolation is perfect. My hips feel stronger, my posture improved,
+                    and my leggings fit completely differently now.
+                </p>
+            </article>
+
+            <article class="review-card">
+                <p class="review-name">Elena K.</p>
+                <p class="review-stars">
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
+                </p>
+                <p class="review-text">
+                    Super easy to follow and very clear. Loved having both home and gym options. Definitely feeling
+                    more confident in and out of the gym.
                 </p>
             </article>
         </div>
@@ -190,6 +263,8 @@
         <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
     </div>
 </footer>
+
+</div>
 
 <script src="JS/navbar.js"></script>
 <script src="JS/checkout.js"></script>
